Add pattern for scrapperRepostirory